tests/ui/resolve/suggest-constructor-cycle-error.stderr
error[E0423]: cannot initialize a tuple struct which contains private fields
  --> $DIR/suggest-constructor-cycle-error.rs:7:29
   |
LL | const CONST_NAME: a::Uuid = a::Uuid(());
   |                             ^^^^^^^
   |
note: constructor is not visible here due to private fields
  --> $DIR/auxiliary/suggest-constructor-cycle-error.rs:2:21
   |
LL |     pub struct Uuid(());
   |                     ^^ private field

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0423`.
